--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     /* -----------------------
        HERO (Home) — fixed view
-       (Only cosmetic/layout changes here)
+       (Home cosmetics/layout only)
     ----------------------- */
     header#home {
       min-height: 100vh;
@@ -48,7 +48,6 @@
       background-repeat: no-repeat, no-repeat;
       background-size: cover, cover;
       background-attachment: fixed, fixed;
-      /* new: internal layout wrapper fills the viewport */
       display: grid;
       place-items: center;
       padding: 24px;
@@ -84,7 +83,7 @@
       display: grid;
       grid-template-columns: 1.25fr 1fr;
       gap: 18px;
-      min-height: 0; /* allow grid children to size properly */
+      min-height: 0;
     }
 
     /* Left side: 4 cards (2x2) */
@@ -152,8 +151,6 @@
     }
     .host-note strong { font-weight: 800; }
 
-    /* Small screens: stack nicely (you said mobile is lower priority, but this
-       keeps things from totally breaking without touching other pages) */
     @media (max-width: 820px) {
       .home-main { grid-template-columns: 1fr; }
       .home-cards { grid-template-columns: 1fr 1fr; }
@@ -165,8 +162,7 @@
     }
 
     /* -----------------------
-       PAGE SECTIONS
-       (Unchanged)
+       PAGE SECTIONS (unchanged)
     ----------------------- */
     section{
       min-height: 100vh;
@@ -177,7 +173,7 @@
     }
     section .inner { max-width: 1100px; margin: 0 auto; position: relative; z-index: 1; }
 
-    /* Backgrounds (dark overlay to avoid low contrast) */
+    /* Backgrounds (dark overlay) */
     section::before{
       content:""; position:absolute; inset:0; z-index:0;
       background: rgba(0,0,0,.45);
@@ -195,8 +191,7 @@
     section h2{ font-size: 36px; margin: 0 0 14px; }
     section p.lead { max-width: 900px; margin: 0 auto 22px; font-size: 18px; }
 
-    /* Make CONNECT usable when body is locked:
-       allow scrolling *inside* the section if content is tall */
+    /* Connect scroll when page is locked */
     body.no-scroll #connect .inner {
       max-height: calc(100vh - 120px);
       overflow: auto;
@@ -204,8 +199,7 @@
     }
 
     /* -----------------------
-       HAMBURGER + SIDE PANEL
-       (Unchanged)
+       HAMBURGER + SIDE PANEL (unchanged)
     ----------------------- */
     .hamburger {
       position: fixed;
@@ -280,7 +274,7 @@
     }
 
     /* -----------------------
-       VIDEO GRID & CARDS (Unchanged)
+       VIDEO GRID & CARDS (unchanged)
     ----------------------- */
     .video-grid{
       display:grid;
@@ -305,7 +299,7 @@
     .video-info a:hover{ background:#e65c00; }
 
     /* -----------------------
-       FORMS (Unchanged)
+       FORMS (unchanged)
     ----------------------- */
     .form {
       max-width: 560px; margin: 0 auto; text-align: left;
@@ -335,14 +329,14 @@
 </head>
 
 <body class="no-scroll">
-  <!-- HAMBURGER (unchanged) -->
+  <!-- HAMBURGER -->
   <button class="hamburger" id="hamburger"
     aria-label="Open menu" aria-haspopup="true"
     aria-controls="side-panel" aria-expanded="false">
     <div class="lines"><span></span></div>
   </button>
 
-  <!-- SCRIM + SIDE PANEL (unchanged) -->
+  <!-- SCRIM + SIDE PANEL -->
   <div class="scrim" id="scrim" aria-hidden="true"></div>
   <aside class="side-panel" id="side-panel" aria-hidden="true" aria-labelledby="panel-title" role="dialog">
     <div class="panel-header">
@@ -352,22 +346,20 @@
     <nav class="panel-links">
       <a href="#home"   data-panel-nav>Home</a>
       <a href="#course" data-panel-nav>Course content</a>
-      <a href="#connect"data-panel-nav>Connect with me</a>
+      <!-- FIXED: added a space before data-panel-nav -->
+      <a href="#connect" data-panel-nav>Connect with me</a>
       <a href="#repo"   data-panel-nav>Repository</a>
     </nav>
   </aside>
 
-  <!-- HOME / HERO (non-scroll) — UPDATED MARKUP ONLY HERE -->
+  <!-- HOME / HERO (non-scroll) -->
   <header id="home" class="active">
     <div class="home-wrap">
-      <!-- Top bar: site name -->
       <div class="home-top">
         <h1 class="home-title">IELTS Classes by Somik</h1>
       </div>
 
-      <!-- Main area: 4 cards (left) + host circle & note (right) -->
       <div class="home-main">
-        <!-- Left: 4 glass cards -->
         <div class="home-cards">
           <article class="home-card">
             <h3>About the author</h3>
@@ -387,7 +379,6 @@
           </article>
         </div>
 
-        <!-- Right: circular photo + small note -->
         <div class="host-wrap">
           <div class="host-photo" aria-label="Photo of Somik Das"></div>
           <div class="host-note">
@@ -398,7 +389,7 @@
     </div>
   </header>
 
-  <!-- COURSE (scrollable) — UNCHANGED -->
+  <!-- COURSE (scrollable) -->
   <section id="course">
     <div class="inner">
       <h2>Course Content</h2>
@@ -519,7 +510,7 @@
     </div>
   </section>
 
-  <!-- CONNECT WITH ME (non-scroll page; inner can scroll if needed) — UNCHANGED -->
+  <!-- CONNECT WITH ME (non-scroll page; inner can scroll if needed) -->
   <section id="connect">
     <div class="inner">
       <h2>Connect with me</h2>
@@ -547,7 +538,7 @@
     </div>
   </section>
 
-  <!-- REPOSITORY (CODE-GATED, scrollable) — UNCHANGED -->
+  <!-- REPOSITORY (CODE-GATED, scrollable) -->
   <section id="repo">
     <div class="inner">
       <h2>Repository</h2>
@@ -578,25 +569,20 @@
   <script>
     /* =======================
        OWNER MODE (Option A)
-       - Visit once with ?owner=1 to enable owner mode on your device.
-       - Persists via localStorage.
-       (Unchanged)
+       (unchanged)
     ======================= */
     const ownerMode =
       /[?&]owner=1\b/.test(location.search) ||
       localStorage.getItem('ownerMode') === 'true';
-
     if (ownerMode) localStorage.setItem('ownerMode', 'true');
 
     /* =======================
-       REPO ACCESS CODE (Unchanged)
+       REPO ACCESS CODE (unchanged)
     ======================= */
     const ACCESS_CODE = "IELTS-ACCESS-2025"; // <--- change me
 
     /* =======================
-       SINGLE-VIEW ROUTER (Unchanged)
-       - Home + Connect => non-scroll page
-       - Course + Repo  => scrollable page
+       SINGLE-VIEW ROUTER (unchanged)
     ======================= */
     const SECTION_IDS = ["home", "course", "connect", "repo"];
     const bodyEl = document.body;
@@ -610,7 +596,6 @@
       const target = document.getElementById(id);
       if (target) target.classList.add("active");
 
-      // Lock page scroll for Home and Connect; unlock for Course and Repo
       if (id === "home" || id === "connect") {
         bodyEl.classList.add("no-scroll");
       } else {
@@ -619,7 +604,6 @@
 
       history.replaceState(null, "", `#${id}`);
 
-      // If we navigated to repo, re-evaluate lock state (handles expiry)
       if (id === "repo") renderRepoUI();
     }
 
@@ -629,20 +613,8 @@
       showOnly(SECTION_IDS.includes(id) ? id : "home");
     });
 
-    // Intercept side-panel links
-    document.querySelectorAll('[data-panel-nav]').forEach(link=>{
-      link.addEventListener('click', (e)=>{
-        e.preventDefault();
-        const href = link.getAttribute('href') || "";
-        const id = href.replace("#","");
-        if (!id) return;
-        showOnly(id);
-        closePanel();
-      });
-    });
-
     /* =======================
-       PANEL OPEN/CLOSE (Unchanged)
+       PANEL OPEN/CLOSE (unchanged)
     ======================= */
     const hamburger = document.getElementById('hamburger');
     const panel     = document.getElementById('side-panel');
@@ -669,10 +641,30 @@
     document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') closePanel(); });
 
     /* =======================
-       REPOSITORY GATE
-       - Auto-lock on tab close (new session)
-       - Lock after 3 hours
-       (Unchanged)
+       SIDE-PANEL NAV (robust)
+       CHANGE: event delegation so nav always works
+    ======================= */
+    panel.addEventListener('click', (e) => {
+      const link = e.target.closest('a[data-panel-nav]');
+      if (!link) return;
+      e.preventDefault();
+      const id = (link.getAttribute('href') || '').replace('#','');
+      if (!id) return;
+      showOnly(id);
+      closePanel();
+    });
+
+    /* (Optional legacy helper kept; harmless duplication)
+       Clicking any in-document link to #repo shows it */
+    document.querySelectorAll('a[href="#repo"]').forEach(a=>{
+      a.addEventListener('click', (e)=>{
+        e.preventDefault();
+        showOnly('repo');
+      });
+    });
+
+    /* =======================
+       REPOSITORY GATE (unchanged)
     ======================= */
     const THREE_HOURS_MS = 3 * 60 * 60 * 1000;
 
@@ -706,15 +698,13 @@
       repoGate.style.display    = unlocked ? 'none' : '';
       repoContent.style.display = unlocked ? '' : 'none';
 
-      // Owner-only lock button visibility
       lockBtn.style.display   = (unlocked && ownerMode) ? '' : 'none';
       ownerHint.style.display = ownerMode ? '' : 'none';
     }
 
-    // New session = tab just opened => force lock
     window.addEventListener('load', ()=>{
       if (!sessionStorage.getItem('sessionActive')) {
-        clearRepoUnlock();                 // lock at the start of a new tab session
+        clearRepoUnlock();
         sessionStorage.setItem('sessionActive', '1');
       }
       renderRepoUI();
@@ -733,24 +723,13 @@
       }
     });
 
-    // Owner can re-lock anytime
     lockBtn.addEventListener('click', ()=>{
       clearRepoUnlock();
       renderRepoUI();
     });
 
-    // Clicking "Repository" in the panel shows it; gate renders as needed
-    document.querySelectorAll('a[href="#repo"]').forEach(a=>{
-      a.addEventListener('click', (e)=>{
-        e.preventDefault();
-        showOnly('repo');
-      });
-    });
-
     /* =======================
-       CONTACT FORM (Formspree)
-       - Progressive enhancement: AJAX submit for inline feedback.
-       (Unchanged)
+       CONTACT FORM (unchanged)
     ======================= */
     const contactForm = document.getElementById('contact-form');
     const contactStatus = document.getElementById('contact-status');
